samples/_failures_safe/1761644513_67d721_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a920a211.c: In function ‘tokenize’:
./samples/SAFE/__tmp_a920a211.c:150:9: error: expected expression at end of input
  150 |         tokens[
      |         ^~~~~~
./samples/SAFE/__tmp_a920a211.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_a920a211.c:150:9: error: expected declaration or statement at end of input
